update codeGenerator